# tradeapp

./: .gitignore  README.md  RUNNING.md  START-HIER.bat  package.json  pyproject.toml
app/: layout.tsx  page.tsx  styles.css
app/api/advice/: route.ts
app/api/backtests/: route.ts
app/api/market/advice/: route.ts
app/api/market/backtest/: route.ts
app/api/market/live-scan/: route.ts
app/api/market/tv-advice/: route.ts
app/api/market/tv-candles/: route.ts
app/api/strategies/: route.ts
app/components/: AdviceTable.tsx  BacktestPanel.tsx  ChartPanel.tsx  LiveScanPanel.tsx  RealMarketPanel.tsx  StatusCard.tsx  StrategyCards.tsx
app/lib/: backtests.ts  domain.ts  market-data.ts  market-strategy.ts  market-symbols.ts  mock-data.ts  risk-engine.ts  strategies.ts  tradingview-data.ts
docs/: strategy-research.md
src/ftmo_advice/: __init__.py
src/ftmo_advice/strategies/: __init__.py  catalog.py  cli.py  indicators.py  models.py
tests/: test_strategy_catalog.py  test_strategy_cli.py
tests/web/: webapp-files.test.mjs
